<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_jenis_materi"
            android:text="@string/JenisMateri"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:padding="4dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvNamaLimbah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NamaLimbah"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvLimbahDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LimbahDetail"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_marginBottom="8dp"/>


    </LinearLayout>

</RelativeLayout>