<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbDetail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:elevation="0dp" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/ivGambarLimbah"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_jenis_materi"
                android:text="@string/JenisMateri"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:padding="4dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvLimbah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NamaLimbah"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvLimbahDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LimbahDetail"
                android:textSize="12sp"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pengelolaan"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvDetailPengelolaan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PengelolaanDetail"
                android:textSize="12sp"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/KodeLimbah"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvKodeLimbah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_kode_limbah"
                android:text="B105d"
                android:padding="4dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
